<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_alert_sp_min"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_form"
            android:title="@string/menu_reportes" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_perfil" />
        <!-- <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_config"
            android:title="@string/menu_configuracion" /> -->
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item
            android:id="@+id/nav_permisos"
            android:icon="@drawable/ic_encima"
            android:title="@string/menu_permisos" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_informacion" />
    </group>

</menu>
